homepage update: added card rows, made eevee gif under navbar, card rows now scrollable, small bug with display making bottom site scrollbar appear

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,7 @@
+*{
+    z-index: 100;
+}
+
 .nav__container {
   width: 100%;
   height: 80px;
